# reservation

./: .env.example  .gitignore  Makefile  alembic.ini.example  bot.py  main.py  pyproject.toml  readme.md  requirements.txt  tools.py
app/libs/: config.py  connection.py  database.py
app/models/: orders.py  seats.py  tables.py  users.py
app/repositories/: order_repository.py  seat_repository.py  table_repository.py  user_repository.py
app/routers/: auth.py  transaction.py
app/schemas/: transaction_form.py
app/services/: order_service.py  table_service.py  user_service.py
migrations/: env.py  script.py.mako
migrations/versions/: 25d99840431c_added_token_to_user.py  28f2bfa067db_remove_price_from_seat.py  39551de7c0e1_add_orders_4.py  3c7da6edec5b_add_orders_2.py  4cb0a8792fa8_added_relation_to_table_to_order.py  55414d1bbf45_add_orders_1.py  57453085e215_refactor_time.py  6b8e58f615ef_refactor_added_date.py  8916ab248cd4_added_added_time.py  a78cff960455_deleted_status.py  a98cc38b8a17_added_time.py  abfa150c3679_added_relation_to_seat_to_order.py  af64ef7b1be8_added_remove_time.py  b0b7398d540f_added_relation_to_seat_to_order_rev1.py  b8518deadf27_add_orders_3.py  e671bcf44cad_added_default_created_at.py  eff25a5b8ce5_added_relation_to_user_and_order.py  f4f2a287c61c_first_generation.py  fed99fdc27c1_refactor_remove_day.py
seeds/: tables_seeding.py  user_seeding.py
