[tool.poetry]
name = "reservation"
version = "0.1.0"
description = "Task"
authors = ["Dwi Ahmad <dwi.hyuga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
alembic = "^1.12.0"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.8"
pydantic = "<2"
gunicorn = "^21.2.0"
ipython = "^8.16.1"
psycopg2 = "^2.9.9"
bcrypt = "^4.0.1"
numpy = "^1.26.0"
pytelegrambotapi = "^4.14.0"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
